--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "esModuleInterop": true,
     "moduleResolution":"Node",
     "experimentalDecorators": true,
-    "outDir": "./Xdist"
+    "outDir": "./dist"
   }
 }
